partie Danlos + qques corrections

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,4 +1,4 @@
-@InProceedings{boudin:detection:taln12,
+@InProceedings{boudin-detection-taln12,
   author    = {Florian Boudin and Nicolas Hernandez},
   title     = {{D\'{e}tection et correction automatique d'erreurs d'annotation morpho-syntaxique du French TreeBank}},
   booktitle = {Actes de la 19e conf\'{e}rence sur le Traitement Automatique des Langues Naturelles (TALN'2012)},
@@ -7,7 +7,7 @@
   pages     = {281-291}
 }
 
-@InProceedings{constant:integrer:taln11,
+@InProceedings{constant-integrer-taln11,
   author    = {Matthieu Constant and Isabelle Tellier and Denys Duchier and Yoann Dupont and Anthony Sigogne and Sylvie Billot},
   title     = {{Int\'{e}grer des connaissances linguistiques dans un CRF : application \`{a} l'apprentissage d'un segmenteur-\'{e}tiqueteur du fran\c{c}ais}},
   booktitle = {Actes de la 18e conf\'{e}rence sur le Traitement Automatique des Langues Naturelles (TALN'2011)},
@@ -15,7 +15,7 @@
   address   = {Montpellier, France}
 }
 
-@article{Lappin:1994:APA:203987.203989,
+@article{Lappin-1994-APA-203987.203989,
  author = {Lappin, Shalom and Leass, Herbert J.},
  title = {An algorithm for pronominal anaphora resolution},
  journal = {Comput. Linguist.},
@@ -33,7 +33,7 @@
  address = {Cambridge, MA, USA}
 } 
 
-@article{Li:2009:IPU:1622716.1622726,
+@article{Li-2009-IPU-1622716.1622726,
  author = {Li, Yifan and Musilek, Petr and Reformat, Marek and Wyard-Scott, Loren},
  title = {Identification of pleonastic it using the web},
  journal = {J. Artif. Int. Res.},
@@ -51,7 +51,7 @@
  address = {USA}
 } 
 
-@InProceedings{danlos:ilimp:taln2005,
+@InProceedings{danlos-ilimp-taln2005,
  author = {Laurence Danlos},
  title = {ILIMP : Outil pour repérer les occurrences du pronom impersonnel il},
  booktitle = {Proceedings of TALN 2005},
@@ -59,7 +59,7 @@
  year = {2005}
 }
 
-@inproceedings{Bergsma:11,
+@inproceedings{Bergsma-11,
 	author = {Bergsma, Shane and Yarowsky, David}, 
 	title = {NADA: A Robust System for Non-Referential Pronoun Detection}, 
 	booktitle = {Proc. DAARC}, 
@@ -68,7 +68,7 @@
 	address = {Faro, Portugal}
  }
  
-@inproceedings{tutin:hal-00373327,
+@inproceedings{tutin-hal-00373327,
     hal_id = {hal-00373327},
     url = {http://hal.archives-ouvertes.fr/hal-00373327},
     title = {{Annotating a large corpus with anaphoric links}},
@@ -100,7 +100,7 @@
     year = {2005}
 }
 
-@article{Marcus:1993:BLA:972470.972475,
+@article{Marcus-1993-BLA-972470.972475,
  author = {Marcus, Mitchell P. and Marcinkiewicz, Mary Ann and Santorini, Beatrice},
  title = {Building a large annotated corpus of English: the penn treebank},
  journal = {Comput. Linguist.},
@@ -116,7 +116,7 @@
  acmid = {972475},
  publisher = {MIT Press},
  address = {Cambridge, MA, USA}
-} 
+}
 
 @INPROCEEDINGS{Bergsma08distributionalidentification,
     author = {Shane Bergsma and Dekang Lin and Google Inc and Randy Goebel},
@@ -126,37 +126,3 @@
     pages = {10--18}
 }
 
-@misc{hirschman-97,
-    author = {Hirschman, L.},
-    citeulike-article-id = {973329},
-    howpublished = {http://www.muc.saic.com/proceedings/co\_ task.pdf},
-    keywords = {bibtex-import},
-    posted-at = {2006-12-04 15:07:47},
-    priority = {2},
-    title = {{MUC-7 Coreference Task Definition}},
-    year = {1997}
-}
-
-@misc{mate,
- author = {Davies, Sarah, Massimo Poesio, Florence Bruneseaux, and Laurent Romary},
- title = {Annotating coreference in dialogues: Proposal for a scheme for MATE},
- year = {1998}
-}
-
-@inproceedings{Rayson2004,
-    abstract = {{The UCREL semantic analysis system (USAS) is a software tool for undertaking the automatic semantic analysis of English spoken and written data. This paper describes the software system, and the hierarchical semantic tag set containing 21 major discourse fields and 232 fine-grained semantic field tags. We discuss the manually constructed lexical resources on which the system relies, and the seven disambiguation methods including part-of-speech tagging, general likelihood ranking, multi-word-expression extraction, domain of discourse identification, and contextual rules. We report an evaluation of the accuracy of the system compared to a manually tagged test corpus on which the USAS software obtained a precision value of 91\%. Finally, we make reference to the applications of the system in corpus linguistics, content analysis, software engineering, and electronic dictionaries.}},
-    address = {Paris},
-    author = {Rayson, Paul and Archer, Dawn and Piao, Scott and McEnery, Tony},
-    booktitle = {Proceedings of the LREC 2004 Workshop on Beyond Named Entity Recognition Semantic Labelling for NLP Tasks},
-    citeulike-article-id = {10425873},
-    citeulike-linkout-0 = {http://comp.eprints.lancs.ac.uk/922/},
-    keywords = {nlp, semantics},
-    location = {Lisbon, Portugal},
-    organization = {European Language Resources Association (ELRA)},
-    pages = {7--12},
-    posted-at = {2012-03-07 22:37:30},
-    priority = {2},
-    title = {The {UCREL} semantic analysis system},
-    url = {http://comp.eprints.lancs.ac.uk/922/},
-    year = {2004}
-}
