--- a/biblio.bib
+++ b/biblio.bib
@@ -126,3 +126,46 @@
     pages = {10--18}
 }
 
+@inproceedings{lavergne2010practical,
+    author    = {Lavergne, Thomas and Capp\'{e}, Olivier and Yvon,
+                 Fran\c{c}ois},
+    title     = {Practical Very Large Scale {CRFs}},
+    booktitle = {Proceedings the 48th Annual Meeting of the Association
+                 for Computational Linguistics ({ACL})},
+    month     = {July},
+    year      = {2010},
+    location  = {Uppsala, Sweden},
+    publisher = {Association for Computational Linguistics},
+    pages     = {504--513},
+    url       = {http://www.aclweb.org/anthology/P10-1052}
+}
+
+@inproceedings{leclere-hal-00192888,
+    url = {http://hal.archives-ouvertes.fr/hal-00192888},
+    title = {{The Lexicon-Grammar of French Verbs: a syntactic database}},
+    author = {Lecl{\`e}re, Christian},
+    affiliation = {Laboratoire d'Informatique Gaspard-Monge - LIGM},
+    booktitle = {{Proceedings of the First International Conference on Linguistic Informatics}},
+    pages = {33-46},
+    address = {Tokyo, Japon},
+    series = {Linguistic Informatics 1 },
+    note = {CNRS },
+    year = {2003},
+}
+
+@incollection{gross-halshs-00278309,
+    hal_id = {halshs-00278309},
+    url = {http://halshs.archives-ouvertes.fr/halshs-00278309},
+    title = {{THE LEXICON GRAMMAR OF A LANGUAGE}},
+    author = {Gross, Maurice},
+    abstract = {{Lexicon-grammar is a model of syntax limited to the elementary sentences of a natural language. We present its main theoretical features, mostly inferred from large-scale empirical studies aimed at obtaining a large coverage of French. French is the earliest application, but other studies, in varied languages, have also been performed.The major principle is that the unit of meaning is not located at the level of the word, but at the level of elementary sentences; we will see how coherent descriptions of natural languages have been built on this basis.}},
+    keywords = {syntax; lexicon; lexicon-grammar},
+    language = {Anglais},
+    affiliation = {Laboratoire d'automatique documentaire et linguistique - LADL},
+    booktitle = {{Encyclopedia of Language and Linguistics}},
+    publisher = {Pergamon},
+    pages = {2195-2205},
+    editor = {R.E.Asher },
+    year = {1994},
+    pdf = {http://halshs.archives-ouvertes.fr/halshs-00278309/PDF/Gross-french-lexicon-94.pdf},
+}
