--- a/Article.tex
+++ b/Article.tex
@@ -24,7 +24,6 @@
 Dans cet article, nous nous intéressons au problème de la détermination du caractère co-référentiel du pronom personnel \og \textit{il} \fg{}, que nous traitons comme une tâche d'apprentissage automatique supervisé. Nous présentons deux expériences utilisant d'étiquetage de séquences, réalisées sur le corpus \citet{tutin-hal-00373327}. La première utilise les traits classiques de la détection de segments syntaxiques pour le français. Pour la seconde, nous ajoutons des traits tirés de la littérature ou observés sur le corpus de développement. Nous montrons que l'approche par apprentissage obtient des résultats encourageants.
 \end{abstract}
 
-%TODO : ref chpattern
 
 \renewcommand\abstractname{Abstract}
 \begin{abstract}
@@ -68,16 +67,13 @@ Certaines sont à base de règles lexico-syntaxiques \citep{Lappin-1994-APA-2039
 Pour le français, il n'existe qu'un outil à base de règles \citep{danlos-ilimp-taln2005}. Celui-ci obtient de très bons résultats, mais les outils à base de règles manquent généralement de robustesse. Il est en effet difficile d'énumérer de manière exhaustive toutes les constructions impersonnelles. Par ailleurs, cet outil n'effectue pas de désambiguïsation morpho-syntaxique lors de son prétraitement, il souffre donc d'erreurs liées à l'absence d'analyse syntaxique.
 
 \paragraph{}
-L'objectif de notre travail est d'établir un système déterminant le caractère anaphorique du \og{}\textit{il}\fg{} français. L'approche à base de règles est abandonnée au profit d'une approche à base d'apprentissage automatique supervisé. Cette tâche peut en effet être considérée comme une tâche de classification : en décrivant chaque instance de \og \textit{il} \fg{} par un jeu de traits appropriés, on peut ensuite prédire l'étiquette d'une nouvelle instance, étant donné son vecteur de traits. Par ailleurs, on peut aussi chercher à définir la tâche comme un problème d'étiquetage de séquence (\emph{sequence labeling}), de par sa sensibilité au contexte local.
-%TODO : comment justifier le sequence labeling ?
+L'objectif de notre travail est d'établir un système déterminant le caractère anaphorique du \og{}\textit{il}\fg{} français. L'approche à base de règles est abandonnée au profit d'une approche à base d'apprentissage automatique supervisé. Cette tâche peut en effet être considérée comme une tâche de classification : en décrivant chaque instance de \og \textit{il} \fg{} par un jeu de traits appropriés, on peut ensuite prédire l'étiquette d'une nouvelle instance, étant donné son vecteur de traits. Par ailleurs, on peut aussi chercher à définir la tâche comme un problème d'étiquetage de séquences syntaxiques (\emph{sequence labeling}), de par sa sensibilité au contexte local. L'approche par étiquetage de séquences syntaxiques se justifie par la volonté d'étendre ces travaux à la détermination du caractère anaphorique des descriptions définies (celles-ci étant des séquences comme\og \textit{l'homme} \fg{}, \og \textit{la maison de Paul} \fg{}, \ldots).
 
-Notre tâche pouvant être définie selon ces deux approches, il convient de les expérimenter toutes deux. Lors de la planification d'expériences, il s'est avéré plus simple de réaliser l'expérience avec le \emph{sequence labeler}\footnote{\samepage L'expérience avec le sequence labeler consistait en une extension d'un TP réalisé sur la reconnaissance d'entités nommées}.
+Notre tâche pouvant être définie selon ces deux approches, il convient de les expérimenter toutes deux. Lors de la planification d'expériences, il s'est avéré plus simple de réaliser l'expérience avec l'étiqueteur de séquences\footnote{\samepage L'expérience avec l'étiqueteur de séquences consistait en une extension d'un TP réalisé sur la reconnaissance d'entités nommées}.
 
 \paragraph{}
-En l'état de notre avancement, nous ne rapportons pour l'instant que les deux expériences à base de sequence labeling.
-
+En l'état de notre avancement, nous ne rapportons pour l'instant que les deux expériences à base d'étiquetage de séquences.
 Nous expérimentons en effet deux jeux de traits pour caractériser les pronoms et leur contexte.
-
 La première expérience consiste à utiliser les traits classiques de la détection de segments syntaxiques pour le français. Pour la deuxième, nous dégageons de nouveaux traits par observation du corpus de développement (un dixième du corpus total) et par recensement de traits mentionnés dans la littérature.
 
 Pour réaliser nos expériences, nous disposons du corpus \cite{tutin-hal-00373327}, lequel est seulement annoté avec les expressions anaphoriques. Nous indiquerons dans la section~\ref{annotation-imp} comment nous avons procédé pour constituer un corpus avec des instances de chaque classe.
@@ -94,15 +90,14 @@ Enfin, en section~\ref{resultats}, nous détaillons les résultats obtenus ainsi
 Pour résoudre cette tâche, nous nous sommes appuyés sur les seuls travaux à notre connaissance en français \citep{danlos-ilimp-taln2005} et sur l'un des plus récents pour l'anglais \citep{Bergsma-11}.
 
 \paragraph{}
-En effet, les travaux de \citet{Lappin-1994-APA-203987.203989} utilisent des règles qui s'appuient sur la structure syntaxique de l'anglais, donc ne sont pas aisément portables au français. De même, les autres approches par classification ont été mises de côté, car les traits apportés aux classifieurs dépendent eux aussi de la structure de l'anglais %TODO : exemples).
+En effet, les travaux de \citet{Lappin-1994-APA-203987.203989} utilisent des règles qui s'appuient sur la structure syntaxique de l'anglais, donc ne sont pas aisément portables au français. De même, les autres approches par classification ont été mises de côté, car les traits apportés aux classifieurs dépendent eux aussi de règles grammaticales anglaises.
 
 \paragraph{}
 L'approche à base de règles développée pour le français est l'outil ILIMP, conçu pour classer les occurrences du pronom \og{}\textit{il}\fg{} selon si elles sont anaphoriques ou impersonnelles \citep{danlos-ilimp-taln2005}. Cet outil travaille sur des textes bruts, non annotés.
 
-Le travail de L. \citeauthor{danlos-ilimp-taln2005} se définit en deux temps : la première démarche conduit à la construction de règles, puis la seconde amène à la reconnaissance des formes %TODO : mieux formuler) 
-en appliquant les règles en question.
+Le travail de L. \citeauthor{danlos-ilimp-taln2005} se définit en deux temps : la première démarche conduit à l'élaboration de règles, puis la seconde amène à la reconnaissance des constructions impersonnelles ou anaphoriques en appliquant les règles en question.
 
-Pour élaborer les règles, \citeauthor{danlos-ilimp-taln2005} observe les propriétés lexicales et syntaxiques des constructions impersonnelles, et plus particulièrement de leur tête lexicale. Elle s'appuie sur le lexique-grammaire du français %TODO : ref)
+Pour élaborer les règles, \citeauthor{danlos-ilimp-taln2005} observe les propriétés lexicales et syntaxiques des constructions impersonnelles, et plus particulièrement de leur tête lexicale. Elle s'appuie sur le lexique-grammaire du français\footnote{http://infolingu.univ-mlv.fr/} \citep{gross-halshs-00278309,leclere-hal-00192888}
  qui décrit l'ensemble des têtes lexicales des phrases simples du français, avec leurs arguments syntaxiques et les alternances possibles.
 %TODO : reformuler car mots de Danlos). 
 Elle définit alors une liste de verbes, adjectifs et expressions caractérisant des constructions impersonnelles, qu'elle divise d'ailleurs en deux catégories : les constructions intrinsèquement impersonnelles, qui ne peuvent avoir comme sujet que \og \textit{il} \fg{}, et les constructions impersonnelles à sujet profond extraposé (sujet phrastique ou nominal). On peut distinguer par exemple les verbes météorologiques qui ancrent des constructions intrinsèquement impersonnelles (\og \textit{Il pleut} \fg{}), ou alors des adjectifs tels \og \textit{probable} \fg{} qui traduisent des constructions impersonnelles à sujet (phrastique) profond extraposé (\og \textit{Il est probable que Fred viendra} \fg{}).
@@ -110,11 +105,11 @@ Elle définit alors une liste de verbes, adjectifs et expressions caractérisant
 Pour chaque construction impersonnelle, il se trouve que le contexte gauche de la tête lexicale, même s'il est complexe, est analysable sans trop de difficultés.
 Par exemple, on peut rencontrer les constructions suivantes :
 
-\textit{Il est difficile de résoudre ce problème.}
+\og{}\textit{\textbf{Il est} difficile de résoudre ce problème.}\fg{}
 
-\textit{Il peut lui paraître très difficile de résoudre ce problème.}
+\og{}\textit{\textbf{Il peut lui paraître très} difficile de résoudre ce problème.}\fg{}
 
-\textit{Il ne s'est pas avéré difficile de résoudre ce problème.}
+\og{}\textit{\textbf{Il ne s'est pas avéré} difficile de résoudre ce problème.}\fg{}
 
 Dans ces 3 cas, la tête lexicale est l'adjectif \og \textit{difficile} \fg{} mais le contexte gauche varie. Il s'agit alors de répertorier tous les cas possibles et de les intégrer dans les règles, opération minutieuse mais qui ne pose pas de réel problème.
 
@@ -129,7 +124,7 @@ Afin de les incorporer à ILIMP, ces règles sont traduites en patrons linguisti
 
 Ce patron correspond ainsi à des phrases comme :
 
-\textit{Il est difficile de résoudre ce problème.}
+\og{}\textit{Il est difficile de résoudre ce problème.}\fg{}
 
 \paragraph{}
 UNITEX prend en entrée des données brutes, et les prétraite en effectuant une tokénisation, et en attribuant à chaque token toutes les propriétés morpho-syntaxiques et flexionnelles que celui-ci peut avoir (obtenues grâce au dictionnaire DELAF).
@@ -164,13 +159,14 @@ Pour évaluer ILIMP, le corpus utilisé est \emph{Le Monde}, comportant 3 782 61
 \paragraph{}
 L'approche pour l'anglais proposée par \citet{Bergsma-11}, va allier l'apprentissage automatique supervisé et des observations statistiques.
 Ce système \textit{NADA : Non-Anaphoric Detection Algorithm} prend en entrée des données tokénisées et détecte les occurences de \og{}\textit{it}\fg{} non-coréférentielles. Les données en question n'ont pas été analysées morpho-syntaxiquement, car le postulat est fait que l'ambiguïté repose sur la présence d'entités lexicales spécifiques, et non sur les informations morpho-syntaxiques.
+Par exemple :
 
+\og{} \textit{It is \textbf{able} to maintain a stable price.} \fg{}
+
+\og{} \textit{It is \textbf{important} to maintain a stable price.} \fg{}
 %\setcitestyle{numbers,square}
 
-Deux types de traits sont alors apportés au classifieur : des traits lexicaux-syntaxiques, mais aussi des statistiques tirées du corpus n-gramme de Google \citep{google-ngram}, le classifieur en question est fondé sur un modèle de régression.
-
-Les traits lexicaux sont extraits sur la phrase entière. Il y a par exemple la présence ou non d'autres formes du pronom personnel (\textit{its}/\textit{itself}), la présence d'acronymes, de prépositions juste avant le nom, de \og{}\textit{that}\fg{} ou \og{}\textit{to}\fg{} après le pronom, etc.
-
+Deux types de traits sont alors apportés au classifieur : des traits lexicaux-syntaxiques, mais aussi des statistiques tirées du corpus n-gramme de Google \citep{google-ngram}. Le classifieur est fondé sur un modèle de régression. Les traits lexicaux sont extraits sur la phrase entière. Il y a par exemple la présence d'autres formes du pronom personnel (\textit{its}/\textit{itself}), la présence d'acronymes, de prépositions juste avant le nom, de certains tokens prédéfinis tels \og{}\textit{that}\fg{} ou \og{}\textit{says}\fg{} après le pronom, etc.
 Les traits statistiques sont établis grâce à l'énorme banque de données fournie par Google. En effet, pour chaque 4-gramme contenant le pronom \og{}\textit{it}\fg{}, on va établir un patron (le \og{}\textit{it}\fg{} est remplacé par un \og{}\textit{\_}\fg{}) et observer dans les données si d'autres mots remplissent ce patron, ou si seulement le cas de figure avec \og{}\textit{it}\fg{} a été rencontré. Par exemple, si on extrait \og{}\textit{it is able to}\fg{}, on va rechercher toutes les occurences de la forme \og{}\textit{\_ is able to}\fg{}.
 Les résultats obtenus permettent d'ajouter un trait (un poids) dans le classifieur.
 Seulement, ce corpus étant gigantesque, il a fallu le compresser au maximum. Pour ce faire, diverses techniques ont été utilisées : ne récupérer que les 4-grammes, uniquement ceux contenant \og{}\textit{it}\fg{}, \og{}\textit{they}\fg{} ou \og{}\textit{them}\fg{}, tronquer les mots à 4 caractères, les encoder, ne retenir que les changements d'un 4-gramme à l'autre, etc.
@@ -182,20 +178,11 @@ NADA a été évalué sur les corpus BBN\cite{BBN}, WSJ-2 (tiré du Penn Treeban
 \section{Corpus de travail}
 \label{corpus}
 
-Nous avons effectué nos expérimentations sur une partie du corpus ELRA annoté par \citet{tutin-hal-00373327} composé d'un million de mots.
+Nous avons effectué nos expérimentations sur une partie du corpus annoté par \citet{tutin-hal-00373327}.
+Cette ressource, initialement composée d'un million de mots, annote une grande partie des expressions anaphoriques, même si certaines sont rejetées car trop complexes. Les expressions retenues appartiennent à des classes fermées, telles les pronoms personnels, les déterminants possessifs, les pronoms démonstratifs,\ldots
+L'annotation permet d'indiquer les éléments mis en jeu ainsi que la relation entre l'expression anaphorique et son(ses) antécédent(s). Cette relation peut appartenir à l'une des 5 classes suivantes : coréférence, membre de, description, phrase ou indéfinie.
 
-%TODO
-
-\paragraph{}
-Ce corpus annote une grande partie des expressions anaphoriques, cependant certaines sont rejetées car trop complexes. Les expressions retenues appartiennent alors à des classes fermées.
-
-Chacune de ces expressions est annotée dans le but d'indiquer les éléments mis en jeu ainsi que la relation entre l'expression anaphorique et son(ses) antécédent(s). Cette relation peut appartenir à l'une des 5 classes suivantes : coréférence, membre de, description, phrase ou indéfinie.
-
-L'annotation a été faite à la main par deux linguistes (le processus n'est pas exclusivement manuel puisque les expressions sont pré-annotées automatiquement et des outils d'édition sont utilisés pour simplifier la tâche). Afin de mesurer la fiabilité de l'annotation, une évaluation sur 5\% du corpus a été effectuée.
-
-L'annotation est effectuée en XML. Des balises permettent de distinguer les sections, les paragraphes (<p>), les phrases (<s>) ainsi que les expressions (<exp>). Chaque expression a un ID, et une balise <ptr> permet de lier une expression anaphorique a son(ses) antécédent(s), et renseigner le type de liaison. Quelques autres balises ou attributs permettent de distinguer les cas spéciaux, comme la balise <seg> pour délimiter un segment d'un antécédent spécifique à celui-ci.
-
-
+L'annotation a été faite à la main par deux linguistes (le processus n'est pas exclusivement manuel puisque les expressions sont pré-annotées automatiquement et des outils d'édition sont utilisés pour simplifier la tâche), au format XML. Afin de mesurer la fiabilité de l'annotation, une évaluation sur 5\% du corpus a été effectuée.
 
 \paragraph{}
 Afin de mettre en place une chaîne de traitement, nous travaillons sur la portion du corpus contenant les articles du journal \emph{Le Monde} (rubrique économie). Cette portion contient 202 091 mots. Ceci nous permet d'établir rapidement notre processus d'extraction de traits.
@@ -224,60 +211,68 @@ Le corpus de test demeure quant-à lui inchangé et non consulté durant toute c
 \section{Compilation des traits recensés dans la littérature et enrichis par l'observation}
 \label{approche-traits}
 
-Nos données mises en place, nous cherchons maintenant à recenser les traits pouvant être utiles à notre tâche.
+D'après \citeauthor{danlos-ilimp-taln2005}, les constructions impersonnelles reposent sur des conditions tant lexicales que syntaxiques. Pour les propriétés syntaxiques, des traits peuvent \^etre obtenus grâce à un simple étiquetage morpho-syntaxique, et une observation de ces étiquettes pour les tokens entourant l'occurrence de \og \textit{il} \fg{}. Afin d'extraire les informations lexicales, nous avons fait appel à une heuristique naïve : nous cherchons à décrire la tête lexicale en observant le premier verbe, adjectif ou adverbe suivant l'occurrence de \og \textit{il} \fg{}, en effet l'un d'entre eux constitue cette tête lexicale.
 
-\paragraph{}
-Notre première expérience consiste à tester les traits classiques utilisés pour la reconnaissance de chunks. Les chunks sont des unités lexicales qui définissent la structure syntaxique superficielle des phrases (groupes nominaux, groupes verbaux, etc.). Nous nous sommes appuyés sur le travail d'Isabelle Tellier qui a mis en place un chunker à l'aide des CRF et de Wapiti\cite{constant-integrer-taln11}. Ces traits permettent d'observer le contexte local des occurrences à savoir : les formes de surface et étiquettes morpho-syntaxiques dans une fenêtre de 5 tokens (unigrammes et bigrammes), les préfixes et suffixes entre 1 et 4 caractères, la présence de majuscules, de ponctuation ou de chiffres dans une fenêtre de 3 tokens, si le token étudié est composé uniquement de majuscules/ponctuation/chiffres et enfin s'il commence par une majuscule.
+Lors de nos expériences, nous observons simplement la forme de surface de ces éléments. En l'état de notre avancement, nous n'avons pas implémenté de lexiques recensant les verbes, expressions ou adjectifs particuliers à chaque type de construction. Il est en effet intéressant de déduire de la tête lexicale des traits tels que l'appartenance au vocabulaire des verbes météorologiques, à celui des verbes de discours, etc.
+Nous observons également les combinaisons telles que le premier verbe + la première proposition qui suit le pronom étudié, pour détecter des constructions comme \og \textit{il arrive que} \fg{}. Nous n'observons ces traits qu'au sein de la phrase, à l'instar des travaux de \citeauthor{Bergsma-11} (ceux-ci ont en effet comparé les résultats d'annotation du caractère anaphorique du pronom \og{}\textit{it}\fg{} chez un individu disposant d'une fenêtre de 8 tokens puis disposant de la phrase entière ; il obtient un taux d'exactitude de 85\% dans le premier cas, contre 95\% dans le second).
 
-\paragraph{}
-Pour notre seconde expérience, nous apportons nos propres traits au sequence labeler. Ceux-ci proviennent de la littérature ainsi que de l'observation des données.
+La présence de certains éléments particuliers peut aussi caractériser des constructions anaphoriques : le pronom \og \textit{lui} \fg{}, les déterminants possessifs à la 3\up{ème} personne du singulier, d'autres occurrences de \og \textit{il} \fg{}, etc. La présence d'acronymes ou de noms propres peut quant à elle suggérer l'existence d'un antécédent, donc le caractère anaphorique du pronom (nous n'implémentons pas ces deux éléments lors de nos expériences, car ils nécessitent une reconnaissance préalable des entités nommées).
 
-Nous avons choisi d'extraire certains traits additionnels au sein de la phrase, à l'instar des travaux de S. Bergsma et D. Yarowski. En effet, ceux-ci se sont basés sur les procédés humains : l'expérience consistait à demander à un sujet d'annoter 200 occurrences du \og{}it\fg{} anglais. Celui-ci obtient un taux d'exactitude de 85\% s'il dispose des 4 tokens de chaque côté de l'occurrence, contre 95\% s'il dispose de la phrase entière. Nous faisons l'hypothèse que cette fenêtre est aussi plus judicieuse pour le texte français.
-
-\paragraph{}
-Voici les traits retenus :
-
-\paragraph{}
-\textbullet{} L'observation des formes de surface autour de l'occurrence :
- \begin{itemize}
-  \item Premier verbe/préposition/adverbe/adjectif/clitique suivant l'occurrence
-  \item Premier verbe/préposition/adverbe/adjectif/conjonction précédent l'occurrence
-  \item Première combinaison du type verbe+préposition suivant l'occurrence
-  \item Signes de ponctuation
- \end{itemize}
- 
-\paragraph{}
-\textbullet{} La présence ou non de certains tokens (booléens) :
- \begin{itemize}
-  \item Présence de déterminant possessif à la 3ème personne du singulier (ses, son, sa, ...)
-  \item Présence d'un acronyme
-  \item Présence du pronom \og{}lui\fg{}
-  \item Présence d'une autre occurrence de \og{}il\fg{}
- \end{itemize}
- 
-\paragraph{}
-\textbullet{} Les statistiques sur la phrase (entiers) :
- \begin{itemize}
-  \item Taille de la phrase
-  \item Nombre de \og{}il\fg{} dans la phrase
- \end{itemize}
-
-\paragraph{}
-\textbullet{} Certains patrons fréquents (booléens) :
- \begin{itemize}
-  \item verbes météorologiques (pleuvoir, neiger,\ldots)
-  \item autres verbes impersonnels (advenir, s'agir,\ldots) 
-  \item structures impersonnelles de temps (il est temps de/que, il est l'heure de/que)
-  \item patrons fréquents (Il arrive que, il paraît que, \ldots)
-  \item expressions typiquement impersonnelles (il était une fois, il y a, quoi qu'il en soit,\ldots)
-  \item verbes déclaratifs (dire, affirmer, \ldots) sauf forme passive
-  \item verbes de sentiment (admirer, craindre, s'étonner,\ldots)
-  \item verbes de volonté (vouloir, exiger,\ldots) sauf forme passive
-  \item verbes d'opinion (croire, imaginer, penser, \ldots)
- \end{itemize}
-
-\paragraph{}
-De plus, pour observer le contexte local, les traits classiques pour la reconnaissance de chunks utilisent une fenêtre de 5 tokens (2 avant et 2 après). Nous avons donc envisagé d'élargir celle-ci à 5 tokens avant et après, et de prendre en compte les trigrammes au sein de cette nouvelle fenêtre.
+%TODO : à virer
+%Nos données mises en place, nous cherchons maintenant à recenser les traits pouvant être utiles à notre tâche.
+%
+%\paragraph{}
+%Notre première expérience consiste à tester les traits classiques utilisés pour la reconnaissance de chunks. Les chunks sont des unités lexicales qui définissent la structure syntaxique superficielle des phrases (groupes nominaux, groupes verbaux, etc.). Nous nous sommes appuyés sur le travail d'Isabelle Tellier qui a mis en place un chunker à l'aide des CRF et de Wapiti\cite{constant-integrer-taln11}. Ces traits permettent d'observer le contexte local des occurrences à savoir : les formes de surface et étiquettes morpho-syntaxiques dans une fenêtre de 5 tokens (unigrammes et bigrammes), les préfixes et suffixes entre 1 et 4 caractères, la présence de majuscules, de ponctuation ou de chiffres dans une fenêtre de 3 tokens, si le token étudié est composé uniquement de majuscules/ponctuation/chiffres et enfin s'il commence par une majuscule.
+%
+%\paragraph{}
+%Pour notre seconde expérience, nous apportons nos propres traits au sequence labeler. Ceux-ci proviennent de la littérature ainsi que de l'observation des données.
+%
+%Nous avons choisi d'extraire certains traits additionnels au sein de la phrase, à l'instar des travaux de S. Bergsma et D. Yarowski. En effet, ceux-ci se sont basés sur les procédés humains : l'expérience consistait à demander à un sujet d'annoter 200 occurrences du \og{}it\fg{} anglais. Celui-ci obtient un taux d'exactitude de 85\% s'il dispose des 4 tokens de chaque côté de l'occurrence, contre 95\% s'il dispose de la phrase entière. Nous faisons l'hypothèse que cette fenêtre est aussi plus judicieuse pour le texte français.
+%
+%\paragraph{}
+%Voici les traits retenus :
+%
+%\paragraph{}
+%\textbullet{} L'observation des formes de surface autour de l'occurrence :
+% \begin{itemize}
+%  \item Premier verbe/préposition/adverbe/adjectif/clitique suivant l'occurrence
+%  \item Premier verbe/préposition/adverbe/adjectif/conjonction précédent l'occurrence
+%  \item Première combinaison du type verbe+préposition suivant l'occurrence
+%  \item Signes de ponctuation
+% \end{itemize}
+% 
+%\paragraph{}
+%\textbullet{} La présence ou non de certains tokens (booléens) :
+% \begin{itemize}
+%  \item Présence de déterminant possessif à la 3ème personne du singulier (ses, son, sa, ...)
+%  \item Présence d'un acronyme
+%  \item Présence du pronom \og{}lui\fg{}
+%  \item Présence d'une autre occurrence de \og{}il\fg{}
+% \end{itemize}
+% 
+%\paragraph{}
+%\textbullet{} Les statistiques sur la phrase (entiers) :
+% \begin{itemize}
+%  \item Taille de la phrase
+%  \item Nombre de \og{}il\fg{} dans la phrase
+% \end{itemize}
+%
+%\paragraph{}
+%\textbullet{} Certains patrons fréquents (booléens) :
+% \begin{itemize}
+%  \item verbes météorologiques (pleuvoir, neiger,\ldots)
+%  \item autres verbes impersonnels (advenir, s'agir,\ldots) 
+%  \item structures impersonnelles de temps (il est temps de/que, il est l'heure de/que)
+%  \item patrons fréquents (Il arrive que, il paraît que, \ldots)
+%  \item expressions typiquement impersonnelles (il était une fois, il y a, quoi qu'il en soit,\ldots)
+%  \item verbes déclaratifs (dire, affirmer, \ldots) sauf forme passive
+%  \item verbes de sentiment (admirer, craindre, s'étonner,\ldots)
+%  \item verbes de volonté (vouloir, exiger,\ldots) sauf forme passive
+%  \item verbes d'opinion (croire, imaginer, penser, \ldots)
+% \end{itemize}
+%
+%\paragraph{}
+%De plus, pour observer le contexte local, les traits classiques pour la reconnaissance de chunks utilisent une fenêtre de 5 tokens (2 avant et 2 après). Nous avons donc envisagé d'élargir celle-ci à 5 tokens avant et après, et de prendre en compte les trigrammes au sein de cette nouvelle fenêtre.
 
 % \paragraph{}
 % Ces traits permettent de décrire chaque occurence de \og{}\textit{il}\fg{} au sein du corpus. Nous y ajoutons un dernier type de trait, provenant de l'observation de données extérieures, en l'occurence du corpus Ngram Google :
@@ -294,12 +289,12 @@ De plus, pour observer le contexte local, les traits classiques pour la reconnai
 
 Nous avons opté pour une expérimentation par étiquetage de séquences. En apprentissage automatique, ce type de tâche consiste à assigner une étiquette à chaque élément d'une séquence, compte tenu du contexte proche.
 
-Nous utilisons pour cela l'outil Wapiti\footnote{http://wapiti.limsi.fr} proposé par Thomas Lavergne, implémentant les algorithmes de CRF (Conditional Random Fields) linéaires.
+Nous utilisons pour cela l'outil Wapiti\footnote{http://wapiti.limsi.fr} proposé par \citet{lavergne2010practical}, implémentant les algorithmes de CRF (\textit{Conditional Random Fields}) linéaires.
 
 Le principe du modèle CRF appliqué à l'étiquetage de séquences est le suivant : on observe dans un premier temps des comportements similaires dans le voisinage de l'élément, puis on apprend à l'aide de probabilités distributionnelles les répétitions de contextes locaux, afin d'obtenir des \og règles \fg{}. Celles-ci permettent ensuite de prédire les étiquettes de nouveaux éléments.
 
 
-\subsection{Mise en place d'une chaîne de traitement}
+\subsection{Description du système}
 
 Wapiti prend en entier des fichiers tabulés décrivant chaque token : une ligne correspond à un token, et chaque colonne contient une information telle que la forme de surface, l'étiquetage morpho-syntaxique, les flexions, \ldots La dernière colonne contient la classe que l'on recherche, ici l'annotation au format BIO .
 
@@ -308,23 +303,25 @@ Nous prétraitons en premier lieu les données avec les analyseurs Apache OpenNL
 Ce prétraitement nous permet d'obtenir les étiquettes morpho-syntaxiques ainsi que les traits flexionnels.
 Puis, à l'aide de scripts Bash, nous mettons en place nos fichiers tabulés contenant les informations nécessaires à notre deuxième série d'expériences, à savoir la taille de la phrase, le nombre d'occurrences de \og il \fg{} dans celle-ci, etc.
 
-Au final, notre fichier tabulé contient les colonnes suivantes : forme de surface du token, son étiquette morpho-syntaxique, ses traits flexionnels, la taille de la phrase, le nombre d'occurrences de \og il \fg{} dans celle-ci, idem pour \og lui \fg{} ainsi que les possessifs à la 3ème personne du singulier, les verbes, prépositions, adjectifs, adverbes, conjonctions et clitiques précédent ou suivant le token, et pour finir l'étiquette BIO représentant la classe (\verb!O!, \verb!ANA! ou \verb!IMP!).
+Au final, notre fichier tabulé contient les colonnes suivantes : la forme de surface de chaque token, son étiquette morpho-syntaxique, ses traits flexionnels, la taille de la phrase, le nombre d'occurrences de \og il \fg{} dans celle-ci, idem pour \og lui \fg{} ainsi que les possessifs à la 3ème personne du singulier, les verbes, prépositions, adjectifs, adverbes, conjonctions et clitiques précédent ou suivant le token, et pour finir l'étiquette BIO représentant la classe (\verb!O!, \verb!ANA! ou \verb!IMP!).
 
 \paragraph{}
-Wapiti requiert aussi un fichier de patrons, permettant d'extraire les traits à partir de notre fichier tabulé. Nous utilisons le fichier \emph{chpattern.txt}, établi par Isabelle Tellier pour ses travaux sur la reconnaissance de chunks, auquel nous ajoutons par la suite nos propres patrons.
+Wapiti requiert un fichier de patrons, permettant d'extraire les traits à partir de notre fichier tabulé. Nous utilisons dans un premier temps le fichier \emph{chpattern.txt}, disponible dans la distribution de Wapiti, auquel nous ajoutons par la suite nos propres patrons.
 
 \paragraph{}
 A partir de ces traits, nous pouvons dorénavant entraîner notre modèle.
 
 
-\subsection{Baseline}
+\subsection{Approche de base}
 
-Nous considérons que la Baseline correspond à un étiquetage systématique en \verb!B-non-coref!, celle-ci étant la classe majoritaire.
+L'approche de base la plus naïve consiste à étiqueter toutes les occurrences de \og \textit{il} \fg{}  selon la classe majoritaire, ici \verb!IMP!.
 Le taux d'occurrences correctement classées est donc de 53,66\%.
 
 \subsection{Evaluation}
 
-Nous évaluons le système obtenu par validation croisée avec 10 partitions. Les mesures utilisées sont le taux d'occurrences correctement classées (exactitude) et pour chaque classe : la précision, le rappel et la F-mesure.
+Nous évaluons le système obtenu par validation croisée avec 10 partitions. Comme dit précédemment, à ce stade de notre travail nous évaluons uniquement sur le corpus d'entraînement.
+
+Les mesures utilisées sont le taux d'occurrences correctement classées (exactitude) et pour chaque classe : la précision, le rappel et la F-mesure.
 
 Par exemple, pour la classe \verb!B-coref!, les mesures sont données par les formules suivantes :
 
@@ -361,38 +358,32 @@ On constate que l'observation du contexte proche suffit à obtenir des résultat
 & \multicolumn{3}{c|}{B-coref} & \multicolumn{3}{c}{B-non-coref}\\
 Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
 \hline
-
+0,8 & 0.79 & 0.77 & 0.78 & 0.81 & 0.83 & 0.83\\
 \hline
 \end{tabular}
 
 \paragraph{}
-La plupart des traits ajoutés n'ont pas été concluents : seuls le nombre de pronoms \og il \fg{} dans la phrase, le verbe suivant le token ainsi que la préposition suivante ont amélioré les scores. Nous arrivons au final à un taux de prédictions correctes de N.
+Les traits ajoutés n'ont pas été concluants : ils n'améliorent presque pas les scores obtenus avec une simple observation du contexte local. Testés séparément, aucun d'entre eux n'améliore les résultats. Pour certaines portions, on constate une légère amélioration des scores avec le nombre de pronoms \og \textit{il} \fg{} dans la phrase ainsi que les formes de surface du verbe et de la préposition suivant l'occurrence, mais cette tendance n'est pas vérifiée lors de l'évaluation globale.
+
+Ceci s'explique par une heuristique trop naïve pour détecter la tête lexicale. En effet, observer le premier verbe suivant le pronom, ou bien le premier adjectif par exemple, ne permet pas de prendre en compte un contexte gauche complexe. Il serait donc intéressant dans un premier temps de déterminer correctement la tête lexicale, pour pouvoir en inférer correctement des traits pertinents, tels que la préposition suivante, l'appartenance à un lexique prédéfini, etc.
 
 \paragraph{}
-Nous n'avons pour l'instant pas implémenté les traits relatifs au lexique, mais c'est une piste à envisager pour des travaux futurs.
+De plus, seule l'approche par étiquetage de séquence à été abordée à travers nos expériences. Il serait judicieux de tester avant tout la résolution de ce problème en tant que tâche de classification simple. Comme expliqué dans l'introduction, nous avons opté pour l'étiquetage de séquences car ces expériences faisaient écho à d'autres travaux, mais ce n'est pas pour autant qu'il faille rejeter l'approche par classification.
 
 \paragraph{}
-De plus, seule l'approche par étiquetage de séquence à été abordée à travers nos expériences. Il serait judicieux de tester avant tout la résolution de ce problème en tant que tâche de classification. Comme expliqué dans l'introduction, nous avons opté pour le sequence labeling car ces expériences faisaient écho à d'autres travaux, mais ce n'est pas pour autant qu'il faille rejeter l'approche par classification.
+On peut aussi noter que la totalité du corpus n'a pas été exploitée. En effet, nous n'avons travaillé que sur les articles du Monde, ce qui représente un cinquième du corpus Tutin et al. Cette portion ne semble d'ailleurs pas représentative en ce qui concerne la proportion de pronoms \og \textit{il} \fg{} impersonnels. 
 
 \paragraph{}
-On peut aussi noter que la totalité du corpus n'a pas été exploitée. En effet, nous n'avons travaillé que sur les articles du Monde, ce qui représente un cinquième du corpus Tutin et al.
-
-Par ailleurs, nous n'avons entraîné le sequence labeler que sur la première partition lors des étapes intermédiaires de nos expériences, ce qui ne reflète pas forcément les résultats réels.
-
-\paragraph{}
-Il aurait aussi pu être intéressant de se servir de statistiques extrinsèques au corpus, au même titre que les travaux de S. Bergsma et D. Yarowski sur la langue anglaise. Effectivement, il existe un corpus Ngram fourni par Google, en français.
-
-\paragraph{}
-Par ailleurs, il pourrait être judicieux de nettoyer les données avant de les fournir à la chaîne de traitement, ou du moins normaliser certains éléments.
+Il pourrait aussi être intéressant de se servir de statistiques extrinsèques au corpus, au même titre que les travaux de \citeauthor{Bergsma-11} sur la langue anglaise. Effectivement, il existe un corpus Ngramme fourni par Google, en français.
 
 
 \section*{Conclusion}
 
 Cette étude s'est focalisée sur la détermination du caractère co-référentiel des occurrences du pronom \og il \fg{}. Les seuls travaux à notre connaissance existants pour le français utilisant un système à base de règles, nous avons ici opté pour un système d'apprentissage automatique supervisé.
 
-A travers cet article, nous avons décrit les expériences réalisées avec un sequence labeler. Dans un premier temps, nous avons utilisé les traits classiques employés pour de la recherche d'entités lexicales. Ces traits observent le contexte local, et donnent des résultats plutôt satisfaisants.
+A travers cet article, nous avons décrit les expériences réalisées avec un étiqueteur de séquences syntaxiques. Dans un premier temps, nous avons utilisé les traits classiques employés pour de la recherche d'entités lexicales. Ces traits observent le contexte local, et donnent des résultats plutôt satisfaisants.
 
-Nous avons ensuite apporté nos propres traits, tirés de la littérature ainsi que de l'observation de notre corpus de développement. Certains d'entre eux ont amélioré les résultats, même si tous n'ont pas été implémentés à l'heure actuelle.
+Nous avons ensuite apporté nos propres traits, tirés de la littérature ainsi que de l'observation de notre corpus de développement, m\^eme si tous n'ont pas été implémentés. Les résultats ne s'améliorent pas particulièrement avec ces traits.
 
 Il sera donc intéressant pour la suite de tester les autres traits envisagés, ainsi que d'aborder cette tâche comme une tâche de classification.
 
