--- a/biblio.bib
+++ b/biblio.bib
@@ -169,3 +169,24 @@
     year = {1994},
     pdf = {http://halshs.archives-ouvertes.fr/halshs-00278309/PDF/Gross-french-lexicon-94.pdf},
 }
+
+@incollection{courtois,
+    title = {{Dictionnaires {\'e}lectroniques DELAF anglais et fran{\c c}ais}},
+    author = {Courtois, Blandine},
+    affiliation = {Laboratoire d'Informatique Gaspard-Monge - LIGM},
+    booktitle = {{Lexique, Syntaxe et Lexique-Grammaire. Papers in Honour of Maurice Gross}},
+    publisher = {Amsterdam/Philadelphia : Benjamins},
+    pages = {113-123},
+    series = {Lingvisticae Investigationes Supplementa 24 },
+    year = {2004}
+}
+
+@misc{gundel,
+ title = {Pronouns without NP Antecedents:  How do we know when a pronoun is referential?},
+ author = {Gundel, Jeanette and Hedberg, Nancy and Zacharski, Ron},
+ booktitle = {Anaphora Processing: Linguistic, Cognitive and Computational Modelling},
+ publisher = {John Benjamins},
+ pages = {351-364},
+ editor = {Antonio Branco, Tony McEnery, and Ruslan Mitkov},
+ year = {2005}
+}
