--- a/Article.tex
+++ b/Article.tex
@@ -248,7 +248,7 @@ Precision = \frac{Nombre\ d'occurences\ correctement\ classees\ ANA}{Nombre\ d'o
 
 \begin{equation}
 \label{Rappel}
-Rappel = \frac{Nombre\ d'occurences\ classees\ ANA}{Nombre\ d'occurences\ annotees\ comme\ anaphoriques}
+Rappel = \frac{Nombre\ d'occurences\ correctement\ classees\ ANA}{Nombre\ d'occurences\ annotees\ comme\ anaphoriques}
 \end{equation}
 
 \begin{equation}
@@ -274,7 +274,7 @@ Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
 \end{tabular}
 
 \paragraph{}
-On constate que l'observation du contexte proche suffit à obtenir des résultats satisfaisants, avec 82\% d'occurrences correctement classées. Ainsi, sans même s'intéresser à la nature des constructions impersonnelles et anaphoriques, la simple observation des formes de surfaces et étiquettes morpho-syntaxiques dans une fenêtre de 5 tokens autour du pronom \textit{il} permet de déterminer son caractère dans une grande partie des cas.
+On constate que l'observation du contexte proche suffit à obtenir des résultats satisfaisants, avec 79\% d'occurrences correctement classées. Ainsi, sans même s'intéresser à la nature des constructions impersonnelles et anaphoriques, la simple observation des formes de surfaces et étiquettes morpho-syntaxiques dans une fenêtre de 5 tokens autour du pronom \textit{il} permet de déterminer son caractère dans une grande partie des cas.
 
 \paragraph{}
 \textbf{Série d'expériences avec incorporation de nouveaux traits :}
